discussion/kv_engine/177834/177834_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Test performance with f14 vs std::unordered_map

Change-Id: I0edcfebe6b4d61d78d6a310ff48fd6f36cfb73b0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-07-21 13:18:06.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-21 13:47:08.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19119/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/statistics/prometheus.cc:131:68: error: implicit instantiation of undefined template "folly::F14FastMap<std::__cxx11::basic_string<char>, prometheus::MetricFamily, folly::HeterogeneousAccessHash<std::__cxx11::basic_string<char>, void>, folly::HeterogeneousAccessEqualTo<std::__cxx11::basic_string<char>, void>, std::allocator<std::pair<const std::__cxx11::basic_string<char>, prometheus::MetricFamily> > >" [clang-diagnostic-error]
        folly::F14FastMap<std::string, ::prometheus::MetricFamily> statsMap;
                                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/F14Map-fwd.h:55:7: note: template is declared here
class F14FastMap;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:25:28: error: no template named "F14FastMap" in namespace "folly" [clang-diagnostic-error]
    using StatMap = folly::F14FastMap<std::string, prometheus::MetricFamily>;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:30:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap high;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:31:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap low;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:32:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap metering;
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19119/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/statistics/prometheus.cc:131:68:
error: implicit instantiation of undefined template "folly::F14FastMap<std::__cxx11::basic_string<char>, prometheus::MetricFamily, folly::HeterogeneousAccessHash<std::__cxx11::basic_string<char>, void>, folly::HeterogeneousAccessEqualTo<std::__cxx11::basic_string<char>, void>, std::allocator<std::pair<const std::__cxx11::basic_string<char>, prometheus::MetricFamily> > >" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19119/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40294/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/statistics/cbstat_collector.cc:41:38:
error: implicit instantiation of undefined template "folly::F14FastMap<const char *, std::basic_string_view<char, std::char_traits<char> >, std::hash<std::string_view>, std::equal_to<std::basic_string_view<char, std::char_traits<char> > >, std::allocator<std::pair<const char *const, std::basic_string_view<char, std::char_traits<char> > > > >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40294/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8805/ : FAILURE

Compile error at [2022-07-21T13:19:05.130Z] ../kv_engine/include/statistics/collector.h:338:9:
error: no matching member function for call to "addStat"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8805/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21388/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_magma_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_magma_value_only
[2022-07-21T13:24:23.858Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1772: Failure
[2022-07-21T13:24:23.858Z] Expected equality of these values:
[2022-07-21T13:24:23.858Z]   err
[2022-07-21T13:24:23.858Z]     Which is: would block
[2022-07-21T13:24:23.858Z]   store->getMetaData( key_1, vbid, cookie, metadata, deleted, datatype)
[2022-07-21T13:24:23.858Z]     Which is: no memory
[2022-07-21T13:24:23.858Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1777: Failure
[2022-07-21T13:24:23.858Z] Expected equality of these values:
[2022-07-21T13:24:23.858Z]   cb::engine_errc::success
[2022-07-21T13:24:23.858Z]     Which is: success
[2022-07-21T13:24:23.858Z]   store->getMetaData( key_1, vbid, cookie, metadata, deleted, datatype)
[2022-07-21T13:24:23.858Z]     Which is: no memory
[2022-07-21T13:24:23.858Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1787: Failure
[2022-07-21T13:24:23.858Z] Expected equality of these values:
[2022-07-21T13:24:23.858Z]   err
[2022-07-21T13:24:23.858Z]     Which is: would block
[2022-07-21T13:24:23.858Z]   store->get(key_1, vbid, cookie, options).getStatus()
[2022-07-21T13:24:23.858Z]     Which is: no memory
[2022-07-21T13:24:23.858Z] Key with TTL:10 should be removed.
[2022-07-21T13:24:23.858Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1796: Failure
[2022-07-21T13:24:23.858Z] Expected equality of these values:
[2022-07-21T13:24:23.858Z]   cb::engine_errc::success
[2022-07-21T13:24:23.858Z]     Which is: success
[2022-07-21T13:24:23.858Z]   item.getStatus()
[2022-07-21T13:24:23.858Z]     Which is: would block
[2022-07-21T13:24:23.858Z] [  FAILED  ] EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_magma_value_only, where GetParam() = "bucket_type=persistent:backend=magma:item_eviction_policy=value_only" (54 ms)
EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_magma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21388/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18284/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47951/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21026/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22088/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20272/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8901/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
